@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Mar 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
+  kmergenie-1.6950.ebuild:
+  install the real binary, add dependency of external python module; the DEPEND
+  line still needs a fix: DEPEND: Invalid atom (Invalid use dep: ''), token 1
+
 *kmergenie-1.6950 (13 Mar 2015)
 
   13 Mar 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
